# dux

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  design.md  install.sh
.claude/: settings.local.json
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: install-script-ci.yml  pages.yml  pr.yml  release.yml  test.yml  web.yml  website-ci.yml
.superpowers/sdd/: task-3-report.md
assets/themes/: dux-dark.toml  dux_dark.toml
crates/dux/: Cargo.toml
crates/dux-core/: Cargo.toml  build.rs
crates/dux-core/src/: action.rs  activity.rs  agent_job.rs  auth.rs  browser.rs  config.rs  config_queue.rs  config_write.rs  diff.rs  editor.rs  engine.rs  gh.rs  git.rs  io_retry.rs  lib.rs  lockfile.rs  logger.rs  macros.rs  model.rs  palette.rs  project_browser.rs  provider.rs  pty.rs  resource_stats.rs  sidebar.rs  startup.rs  statusline.rs  storage.rs  tailscale.rs  theme.rs  viewmodel.rs  welcome.rs  wire.rs  worker.rs  worktree_file.rs
crates/dux-core/src/engine/: command.rs  companion.rs  config_saver.rs  events.rs  in_flight.rs  lifecycle.rs  mod.rs  resume_fallback.rs  spawn_worker.rs  status_op.rs  test_support.rs
crates/dux-core/tests/: pty_fanout.rs  pty_integration.rs
crates/dux-remote/: Cargo.toml
crates/dux-remote/src/: codec.rs  endpoint.rs  handshake.rs  iroh_transport.rs  key_translate.rs  lib.rs  messages.rs  pairing.rs  transport.rs
crates/dux-tui/: Cargo.toml  build.rs
crates/dux-tui/src/: cli.rs  clipboard.rs  config.rs  config_saver.rs  diff.rs  keybindings.rs  lib.rs  server_screen.rs  theme.rs
crates/dux-tui/src/app/: auth_users.rs  input.rs  mod.rs  render.rs  sessions.rs  test_support.rs  text_input.rs  workers.rs
crates/dux-tui/src/app/components/: button.rs  checkbox.rs  mod.rs
crates/dux-web/: Cargo.toml  build.rs
crates/dux-web-browser/: Cargo.toml  build.sh
crates/dux-web-browser/.cargo/: config.toml
crates/dux-web-browser/src/: lib.rs
crates/dux-web-browser/web/: app.js  index.html  style.css
crates/dux-web/src/: auth.rs  bootstrap.rs  bootstrap_routes.rs  browse_routes.rs  changes.rs  changes_routes.rs  config_routes.rs  console.rs  engine_actor.rs  event_bus.rs  file_routes.rs  git_routes.rs  host_guard.rs  lib.rs  project_actions.rs  project_reads.rs  protocol.rs  rest_common.rs  server.rs  session_actions.rs  spine_routes.rs  startup_logs.rs  terminal_actions.rs  test_support.rs  tls.rs  web_assets.rs
crates/dux-web/src/assets/: index.html
crates/dux-web/tests/: auth_gate.rs  changes_events.rs  serve_with_engine.rs  static_serving.rs  tls_serving.rs  ws_transport.rs
crates/dux-web/web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
crates/dux-web/web/public/: manifest.webmanifest  offline.html  sw.js
crates/dux-web/web/src/: App.tsx  index.css  main.tsx  monaco-edcore.d.ts  monacoLanguages.ts
crates/dux-web/web/src/components/: AccessoryBar.tsx  AddProjectDialog.tsx  AgentBeam.test.tsx  AgentBeam.tsx  AgentEnvDialog.tsx  AgentStartupCommandDialog.tsx  AttachWorktreeDialog.test.tsx  AttachWorktreeDialog.tsx  BrailleSpinner.tsx  ChangeProviderDialog.tsx  ChangedFiles.tsx  CheckoutDefaultBranchDialog.tsx  ChunkBoundary.tsx  CodeEditor.tsx  CommandPalette.tsx  CommitDialog.tsx  ConfigEditorDialog.tsx  ConfirmDeleteTerminalDialog.test.tsx  ConfirmDeleteTerminalDialog.tsx  ConfirmDiscardFileDialog.tsx  CreateAgentDialog.tsx  DeleteSessionDialog.tsx  DiffViewer.tsx  EditorIcon.tsx  EditorOverlay.tsx  FileStatusIcon.tsx  FileTree.tsx  GlobalEnvDialog.tsx  KillRunningDialog.tsx  LazyTerminalPane.tsx  LoginScreen.tsx  MacroPopover.tsx  MacrosDialog.tsx  MarkdownPreview.tsx  MobileShell.test.tsx  MobileShell.tsx  OfflineOverlay.test.tsx  OfflineOverlay.tsx  PrBanner.tsx  ProjectInfoDialog.tsx  (+13 more)
crates/dux-web/web/src/components/ui/: button.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx  sidebar.tsx  sonner.tsx
crates/dux-web/web/src/hooks/: use-mobile.ts  use-visual-viewport.ts
crates/dux-web/web/src/lib/: addProjectWarning.test.ts  addProjectWarning.ts  agentName.test.ts  agentName.ts  agentRow.test.ts  agentRow.ts  auth.test.ts  auth.ts  bootstrapApi.test.ts  bootstrapApi.ts  browseApi.ts  changedFiles.test.ts  changedFiles.ts  changesApi.ts  clipboard.test.ts  clipboard.ts  configApi.ts  conn.ts  connection.ts  editorIcons.ts  editors.test.ts  editors.ts  env.ts  eventsSocket.test.ts  eventsSocket.ts  favicon.dom.test.tsx  favicon.test.ts  favicon.ts  fileApi.ts  fileTree.test.ts  fileTree.ts  git.ts  gitFileApi.test.ts  highlight.test.ts  highlight.ts  instanceTitle.test.ts  instanceTitle.ts  localAccess.test.ts  localAccess.ts  macros.test.ts  (+67 more)
crates/dux/src/: cli.rs  config.rs  io_retry.rs  keybindings.rs  lockfile.rs  main.rs  model.rs  pty.rs  raw_input.rs  storage.rs
crates/dux/src/app/: input.rs  mod.rs  render.rs  sessions.rs  workers.rs
crates/dux/src/remote/: client.rs  headless_backend.rs  mod.rs  server.rs  tee_backend.rs  worker.rs
docs/: server-mode-summary.md
docs/audits/: audit02.md
docs/contributing/: schema-policy.md
docs/operations/: encryption-at-rest.md  threat-model.md
dux-amq/: README.md  install.sh
dux-amq/config/: bashrc-additions.sh
dux-amq/scripts/: dux-amq-doctor  finalize-claude-migration.sh  install-gocryptfs.sh
npm/: README.md  package.json
scripts/: install.sh
src/: acp.rs  app.rs  cli.rs  clipboard.rs  config.rs  diff.rs  editor.rs  git.rs  keybindings.rs  lib.rs  lockfile.rs  logger.rs  main.rs  model.rs  provider.rs  pty.rs  purge.rs  purge_encoding.rs  raw_input.rs  reset.rs  startup.rs  statusline.rs  storage.rs  terminal.rs  theme.rs  tui_color.rs
tests/: acp_integration.rs  git_portability.rs  logger_jsonlines.rs  pty_integration.rs  purge_integration.rs  session_state.rs  storage_integration.rs  storage_migrations.rs  watch_engine_integration.rs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  postcss.config.mjs
(+140 files in other folders)
