[workspace]
members = ["crates/dux-core"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
rustix = { version = "1.1", features = ["termios", "process", "event", "stdio", "fs"] }
dux-core = { path = "crates/dux-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indexmap = { version = "2.13.0", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
home = "0.5.11"
content_inspector = "0.2.4"
tempfile = "3.20.0"

[package]
name = "dux"
version = "0.1.0"
edition = "2024"

[dependencies]
dux-core.workspace = true
anyhow.workspace = true
arboard = "3.4.1"
chrono.workspace = true
content_inspector.workspace = true
crossterm = "0.29.0"
home.workspace = true
ratatui = "0.30.0"
serde.workspace = true
serde_json.workspace = true
toml = { version = "1.1.2", features = ["preserve_order"] }
toml_edit = "0.25"
uuid.workspace = true
rustix.workspace = true
signal-hook = "0.4"
similar = "3"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
crokey = "1.4.0"
indexmap.workspace = true
sysinfo = "0.35"
notify = "7"
opaline = { version = "0.4", features = ["ratatui", "builtin-themes"] }

[dev-dependencies]
alacritty_terminal = "0.26.0"
portable-pty = "0.9"
tempfile.workspace = true

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
debug = 0         # No debug information

[profile.profiling]
inherits = "release"
opt-level = 2     # Full speed optimizations (not size-optimized).
debug = 2         # Full debug info for symbols in flamegraphs.
strip = false     # Keep symbols intact for profilers.
lto = false       # Disable LTO so builds are faster during profiling.
