[workspace]
members = [
    "crates/dux-core",
    "crates/dux-tui",
    "crates/dux",
    "crates/dux-web",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
rustix = { version = "1.1", features = ["termios", "process", "event", "stdio", "fs"] }
dux-core = { path = "crates/dux-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indexmap = { version = "2.13.0", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
home = "0.5.11"
content_inspector = "0.2.4"
tempfile = "3.20.0"
notify = "7"
sysinfo = "0.35"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "signal"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tokio-tungstenite = "0.24"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
debug = 0         # No debug information

[profile.profiling]
inherits = "release"
opt-level = 2     # Full speed optimizations (not size-optimized).
debug = 2         # Full debug info for symbols in flamegraphs.
strip = false     # Keep symbols intact for profilers.
lto = false       # Disable LTO so builds are faster during profiling.
