[workspace]
members = [
    "crates/dux-core",
    "crates/dux-tui",
    "crates/dux",
    "crates/dux-web",
]
resolver = "3"

# Single source of truth for the crate version so the TUI (dux-tui) and the web
# (dux-core's display_version) can never show different versions.
[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
bcrypt = "0.19"
chrono = { version = "0.4.41", features = ["serde"] }
rustix = { version = "1.1", features = ["termios", "process", "event", "stdio", "fs"] }
dux-core = { path = "crates/dux-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indexmap = { version = "2.13.0", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
home = "0.5.11"
content_inspector = "0.2.4"
tempfile = "3.20.0"
notify = "7"
sysinfo = "0.35"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "signal"] }
libc = "0.2"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tokio-tungstenite = "0.24"
tower-sessions = "0.15"
# Built-in TLS via ACME (Let's Encrypt, HTTP-01). Runtime-agnostic: the
# `AcmeState` stream must be polled for acquisition/renewal to progress (see
# dux-web/src/tls.rs). Features: `tokio` (runtime glue), `axum` (gates the
# `axum_acceptor` method, also pulls `tower` for the HTTP-01 challenge service),
# `ring` (the rustls crypto provider), `webpki-roots` (CA roots for talking to
# the ACME directory; required by `AcmeConfig::new`), `tls12` (TLS 1.2 support so
# older browsers still connect). `ring` is chosen over the default `aws-lc-rs` so
# the whole workspace uses a single, C-toolchain-free crypto provider. dux-core
# never depends on this — TLS is a dux-web concern only.
rustls-acme = { version = "0.15", default-features = false, features = ["tokio", "axum", "tower", "ring", "webpki-roots", "tls12"] }
# Serves the HTTPS app router behind the rustls-acme acceptor with connect-info
# preserved (per-IP rate limiting depends on it) and a `Handle` for graceful
# shutdown. 0.8 targets axum 0.8.
axum-server = "0.8"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
debug = 0         # No debug information

[profile.profiling]
inherits = "release"
opt-level = 2     # Full speed optimizations (not size-optimized).
debug = 2         # Full debug info for symbols in flamegraphs.
strip = false     # Keep symbols intact for profilers.
lto = false       # Disable LTO so builds are faster during profiling.
