[package]
name = "dux-core"
version.workspace = true
edition = "2024"

[dependencies]
notify.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
chrono.workspace = true
compact_str = "0.9"
content_inspector.workspace = true
home.workspace = true
indexmap.workspace = true
petname = { version = "3.0.0", default-features = false, features = ["default-rng", "default-words"] }
portable-pty = "0.9"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
rustix.workspace = true
serde.workspace = true
toml = "1.1.2"
toml_edit = "0.25"
serde_json.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
uuid.workspace = true
walkdir = "2"
vt100 = "0.16"

[dev-dependencies]
