[package]
name = "dux-web"
version.workspace = true
edition = "2024"

[dependencies]
dux-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
futures-util.workspace = true
# Server-assigned random per-connection ids for status-toast scoping on /ws.
uuid.workspace = true
# Wall-clock `HH:MM:SS` timestamps for the vite-style server console (console.rs).
chrono.workspace = true
rust-embed = { version = "8", features = ["mime-guess", "debug-embed"] }
# Decompress embedded assets on the fly for the rare client that doesn't accept
# gzip (build.rs stores them gzipped to shrink the binary). Already in the lock.
flate2 = "1"

# Gzip the built web assets in place so rust-embed bakes the compressed bytes
# into the binary (and they're served with Content-Encoding: gzip).
[build-dependencies]
flate2 = "1"

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite = { workspace = true }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json"] }
