[package]
name = "dux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arboard = "3.4.1"
chrono = { version = "0.4.41", features = ["serde"] }
content_inspector = "0.2.4"
crossterm = { version = "0.29.0", features = ["serde"] }
home = "0.5.11"
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = { version = "1.1.2", features = ["preserve_order"] }
toml_edit = "0.25"
uuid = { version = "1.17.0", features = ["v4"] }
portable-pty = "0.9"
rustix = { version = "1.1", features = ["termios", "process", "event", "stdio", "fs"] }
signal-hook = "0.4"
alacritty_terminal = "0.26.0"
petname = { version = "3.0.0", default-features = false, features = ["default-rng", "default-words"] }
similar = "3"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
crokey = "1.4.0"
indexmap = { version = "2.13.0", features = ["serde"] }
compact_str = "0.9"
sysinfo = "0.35"
notify = "7"
bincode = { version = "2.0", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
iroh = "0.98"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
data-encoding = "2"
dux-remote = { path = "../dux-remote" }

[dev-dependencies]
tempfile = "3.20.0"
